--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="./notepage/BaiTapLon/website/templates/home.html"></a>
+  <a href="./notepage/BaiTapLon/website/templates/home.html">Click to Home</a>
 </body>
 </html>
